--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.8"
 dependencies = [
     "flask          ~= 2.2.2",
     "flask-session2 ~= 1.3.1",
+    "joblib         ~= 1.2.0",
     "matplotlib     ~= 3.6.3",
     "numpy          ~= 1.24.1",
     "pandas         ~= 1.5.3",
