--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "flask          ~= 2.2.2",
+    "flask-cors     ~= 3.0.10",
     "flask-session2 ~= 1.3.1",
     "joblib         ~= 1.2.0",
     "matplotlib     ~= 3.6.3",
