--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "numpy          ~= 1.24.1",
     "pandas         ~= 1.5.3",
     "python-dotenv  ~= 0.21.1",
+    "scikit-learn   ~= 1.21.0",
     "scipy          ~= 1.10.0",
     "seaborn        ~= 0.12.2",
     "spotipy        ~= 2.22.0",
