Add some rudimentary tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,10 @@ dependencies = [
     "matplotlib     ~= 3.6.3",
     "numpy          ~= 1.24.1",
     "pandas         ~= 1.5.3",
+    "pytest         ~= 7.2.2",
+    "pytest-mock    ~= 3.10.0",
     "python-dotenv  ~= 0.21.1",
-    "scikit-learn   ~= 1.21.0",
+    "scikit-learn   ~= 1.2.1",
     "scipy          ~= 1.10.0",
     "seaborn        ~= 0.12.2",
     "spotipy        ~= 2.22.0",
