--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "flask-session2 ~= 1.3.1",
     "joblib         ~= 1.2.0",
     "matplotlib     ~= 3.6.3",
+    "networkx       ~= 3.0",
     "numpy          ~= 1.24.1",
     "pandas         ~= 1.5.3",
     "pytest         ~= 7.2.2",
